--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "pdfcontractgenerator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A library to generate contracts in PDF with TypeScript.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files":[
+  "files": [
     "lib/**/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config jestconfig.json",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "prepare" : "npm run build",
-    "prepublishOnly" : "npm test && npm run lint",
-    "preversion" : "npm run lint",
-    "version" : "npm run format && git add -A src",
-    "postversion" : "git push && git push --tags"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -37,7 +37,10 @@
     "jspdf": "^2.5.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.5",
+    "jest": "^29.7.0",
     "prettier": "^3.0.3",
+    "ts-jest": "^29.1.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^5.2.2"
